# spire-workload-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
examples/: dump.rs  verify_jwt.rs
proto/: workload.proto
src/: authenticator.rs  der.rs  jwt.rs  lib.rs  pki.rs  spiffe.rs  spire.rs  verifier.rs  workload.rs
tests/data/: priv_key_256v1.pem  priv_key_384r1.pem  pub_key_256v1.pem  pub_key_384r1.pem
tests/tool/: gen_x_y_from_pubkey_string.py
